syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "TicketingApp.Protos";

service ConcertService {
  rpc AddConcert(ConcertRequest) returns (ConcertReply);
  rpc DeleteConcert(DeleteConcertRequest) returns (ConcertReply);
  rpc UpdateConcert(ConcertRequest) returns (ConcertReply);
  rpc GetAllConcerts(google.protobuf.Empty) returns (GetAllConcertsReply);
}

message Concert {
  int32 Id = 1;
  string Artist = 2;
  int32 Price = 3;
  string Place =4;
}

message ConcertRequest {
  int32 Id = 1;
  string Artist = 2;
  int32 Price = 3;
  string Place =4;
}

message DeleteConcertRequest {
  int32 id =1;
}

message ConcertReply {
  int32 id = 1;
}

message GetAllConcertsReply {
  repeated Concert concerts = 1;
}

