syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";

option csharp_namespace = "TicketingAppBackEnd.Protos";

service ConcertService {
  rpc AddConcert(Concert) returns (CustomOperationReply);
  rpc DeleteConcert(ConcertId) returns (CustomOperationReply);
  rpc UpdateConcert(Concert) returns (CustomOperationReply);
  rpc GetConcert(ConcertId) returns (Concert);
  rpc GetAllConcerts(google.protobuf.Empty) returns (GetAllConcertsReply);
}

message Concert {
  int32 Id = 1;
  string Artist = 2;
  int32 Price = 3;
  string Place =4;
}

message ConcertId {
  int32 id =1;
}

message GetAllConcertsReply {
  repeated Concert concerts = 1;
}
